# robot_lego

./: .gitignore  MUJOCO_LOG.TXT  active_task.yaml  ddd.py  frames_2026-03-09_21.09.23.gv  generate_xml.py  lego_voxel_demo.py  run_pick.launch.py  run_pick2.py  sim_launch.py
FoundationPose/: __init__.py  camera_to_base.yaml  check_depth.py  create_block.py  create_meshes.py  find_center.py  main_executor.py  make_camera_to_base_yaml.py  run_lego.py  run_pca.py  test_math.py  version_service copy.py  version_service.py
FoundationPose/docker/: dockerfile
FoundationPose/meshes/: LEGO_Duplo_brick_2x2.stl  LEGO_Duplo_brick_2x21.stl  LEGO_Duplo_brick_4x2.stl  LEGO_Duplo_brick_4x21.stl  p.py
FoundationPose/root/: .bash_history  .bashrc  .wget-hsts
FoundationPose/root/.conda/: environments.txt
FoundationPose/root/.nv/ComputeCache/: index
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/executive_smach/share/executive_smach/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/mj_bridge/lib/mj_bridge/: mj_bridge  pick_and_place
install/smach/share/smach/: package.bash  (+3 more)
log/: latest_build
src/: calibration.py  extr.yaml  pick_box_demo.py  vision_node.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/mj_bridge/: setup.cfg  setup.py
src/mj_bridge/mj_bridge/: groundingdinosamcamera.py  mj_bridge3.py  mjx_panda.xml  panda.xml  run_lego2.py  scene.xml  scene1.xml  test_panda.py  yolo_sam.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml  setup.py
src/my_robot_interfaces/srv/: GetBlockPose.srv
src/my_robot_vision/: CMakeLists.txt  package.xml
src/my_robot_vision/config/: camera_params.yaml
src/my_robot_vision/my_robot_vision/: camera_params.yaml  check_extrinsic.py  foundation_wrapper.py  task_test.yaml  task_test_bigt.yaml  task_test_door.yaml  task_test_flower.yaml  task_test_t.yaml  tasks.yaml  tasksh.yaml  tasksh_true.yaml  vision_node.py  vision_node_back.py  vision_node_flo.py  vision_node_flo_final.py  vision_node_flo_test.py  vision_node_service.py  vision_node_test.py  vision_node_test1.5.py  vision_node_test1.5_test.py  vision_node_test2.py  vision_node_test3.py  vision_node_tracking.py
src/panda_pick/: CMakeLists.txt  package.xml
src/panda_pick/config/: moveit_controllers.yaml  ros2_controllers.yaml
src/panda_pick/launch/: cpp_node.launch.py  demo.launch1.py
src/panda_pick/scripts/: MUJOCO_LOG.TXT  bridge_mujoco.py  calculate_points.py  generate_parts.py  generate_xml.py  initial_positions.yaml  lego_parts.xml  lego_structure.xml  lego_structure.yaml  long_blocks.xml  panda.xml  pick_block1.py  scene.xml  test.py  test1.py  yaml2xml.py
src/panda_pick/src/: active_task.yaml  cpp_pick_ node_real.cpp  cpp_pick_node.cpp  cpp_pick_node_real2.cpp  d.cpp  dd.cpp  ddd.cpp  ddddd.cpp  final_product.yaml  final_product_door.yaml  final_product_flower.yaml  final_product_simple.yaml  final_product_t.yaml  final_test.yaml  final_test2.yaml  generate_task.py  generate_task2.py  myplanner.py  myplanner_test.py  pick_and_place.cpp  single_task.cpp  task_test_flower.yaml  task_test_t2.yaml  tasks.yaml  tasks2.yaml  tasksh.yaml  tasksh_test.yaml  test_math.py  tutorial_node.cpp
src/smach_demo/: setup.cfg  setup.py
src/smach_demo/install/: local_setup.sh  setup.bash  setup.sh
src/smach_demo/log/: latest_build
src/smach_demo/smach_demo/: demo.py
(+150 files in other folders)
